crates/capy-parser/src/parser.rs
//! Recursive-descent expression parser.
//!
//! See `docs/grammar.ebnf` (`expression` and below) for the grammar this
//! module implements. Trivia tokens (whitespace, newlines, comments) are
//! filtered out by [`Parser::new`]; the canonical AST therefore has no
//! trivia. Lexer diagnostics are forwarded as [`ParseErrorKind::Lex`].
//!
//! Error recovery: on an unexpected token, the parser emits a
//! [`ParseDiagnostic`] and produces an [`Expr::Error`] placeholder. On a
//! missing closing delimiter, the parser advances past the offending token
//! to make progress; this is documented in `docs/compatibility.md` (error
//! model row "Parse error (S2)").

#![forbid(unsafe_code)]

use capy_ast::{
    BinOp, ConstItem, EnumItem, Expr, FnItem, Ident, ImportItem, Item, MatchArm, Param, Pattern,
    Source, Span, Stmt, StructField, StructItem, StructPatternField, Type, TypeAlias, UnOp,
    Variant, VariantBody,
};
use capy_lexer::{tokenize, LexResult, Token, TokenKind};

use crate::diagnostic::{ParseDiagnostic, ParseErrorKind};

/// Output of [`parse_expr`].
#[derive(Debug, Clone)]
pub struct ParseResult {
    pub expr: Expr,
    pub diagnostics: Vec<ParseDiagnostic>,
}

/// Output of [`parse_source`].
#[derive(Debug, Clone)]
pub struct ParseSourceResult {
    pub source: Source,
    pub diagnostics: Vec<ParseDiagnostic>,
}

/// Parses `source` as a single CapyLang expression.
///
/// Always returns: lex errors are surfaced as [`ParseErrorKind::Lex`] and
/// recoverable parse errors as [`ParseErrorKind::UnexpectedToken`] /
/// [`ParseErrorKind::UnexpectedEof`]. Any trailing input after the
/// expression is reported as a single `UnexpectedToken` diagnostic.
#[must_use]
pub fn parse_expr(source: &str) -> ParseResult {
    let lex = tokenize(source);
    let mut parser = Parser::new(source, &lex);
    let expr = parser.parse_expression(MIN_PREC);
    parser.expect_eof();
    ParseResult {
        expr,
        diagnostics: parser.diagnostics,
    }
}

/// Parses `source` as a top-level [`Source`] (a sequence of statements).
///
/// Same fail-closed contract as [`parse_expr`]: lex errors surface as
/// [`ParseErrorKind::Lex`], every malformed range becomes a typed
/// diagnostic. Block-like expression statements may omit the trailing `;`;
/// every other expression statement must carry one.
#[must_use]
pub fn parse_source(source: &str) -> ParseSourceResult {
    let lex = tokenize(source);
    let mut parser = Parser::new(source, &lex);
    let stmts = parser.parse_top_level_stmts();
    let total = source.len();
    let result = Source {
        stmts,
        span: Span::new(0, total),
    };
    ParseSourceResult {
        source: result,
        diagnostics: parser.diagnostics,
    }
}

/// Minimum binary-operator precedence accepted at the top level.
const MIN_PREC: u8 = 1;

struct Parser<'a> {
    source: &'a str,
    /// Non-trivia tokens. Always ends with a synthetic `Eof` token.
    tokens: Vec<Token>,
    pos: usize,
    diagnostics: Vec<ParseDiagnostic>,
}

impl<'a> Parser<'a> {
    fn new(source: &'a str, lex: &LexResult) -> Self {
        let tokens: Vec<Token> = lex
            .tokens
            .iter()
            .copied()
            .filter(|t| !t.kind.is_trivia())
            .collect();
        let mut diagnostics = Vec::new();
        for d in &lex.diagnostics {
            diagnostics.push(ParseDiagnostic::new(ParseErrorKind::Lex(d.kind), d.span));
        }
        // `tokenize` guarantees at least the trailing `Eof`; after filtering
        // trivia we are still left with `Eof` so `peek()` is always safe.
        debug_assert!(matches!(
            tokens.last().map(|t| t.kind),
            Some(TokenKind::Eof)
        ));
        Self {
            source,
            tokens,
            pos: 0,
            diagnostics,
        }
    }

    fn peek(&self) -> Token {
        self.tokens[self.pos]
    }

    fn advance(&mut self) -> Token {
        let tok = self.peek();
        if tok.kind != TokenKind::Eof {
            self.pos += 1;
        }
        tok
    }

    fn lexeme(&self, span: Span) -> &str {
        self.source.get(span.start..span.end).unwrap_or("")
    }

    fn error(&mut self, kind: ParseErrorKind, span: Span) {
        self.diagnostics.push(ParseDiagnostic::new(kind, span));
    }

    /// Expects a specific token kind. On mismatch, emits a diagnostic and
    /// advances past the offending token (except at EOF) so the surrounding
    /// loop can make progress.
    fn expect(&mut self, kind: TokenKind, expected: &'static str) -> Token {
        let tok = self.peek();
        if tok.kind == kind {
            self.advance();
            return tok;
        }
        if tok.kind == TokenKind::Eof {
            self.error(ParseErrorKind::UnexpectedEof { expected }, tok.span);
        } else {
            self.error(
                ParseErrorKind::UnexpectedToken {
                    found: tok.kind,
                    expected,
                },
                tok.span,
            );
            self.advance();
        }
        tok
    }

    fn expect_ident(&mut self, expected: &'static str) -> Ident {
        let tok = self.peek();
        if matches!(tok.kind, TokenKind::Ident | TokenKind::SomeKw) {
            self.advance();
            return Ident {
                name: self.lexeme(tok.span).to_string(),
                span: tok.span,
            };
        }
        let kind = if tok.kind == TokenKind::Eof {
            ParseErrorKind::UnexpectedEof { expected }
        } else {
            ParseErrorKind::UnexpectedToken {
                found: tok.kind,
                expected,
            }
        };
        self.error(kind, tok.span);
        // Synthesise a zero-width identifier anchored at the offending span
        // so the AST can still describe the structure. Do **not** advance
        // here: the caller (path or field parser) is responsible for the
        // surrounding context and may want to keep the offending token for
        // a higher-level recovery decision.
        Ident {
            name: String::new(),
            span: Span::new(tok.span.start, tok.span.start),
        }
    }

    fn expect_eof(&mut self) {
        let tok = self.peek();
        if tok.kind != TokenKind::Eof {
            self.error(
                ParseErrorKind::UnexpectedToken {
                    found: tok.kind,
                    expected: "end of input",
                },
                tok.span,
            );
        }
    }

    /// Precedence-climbing binary parser. Left-associative for every operator
    /// in `BinOp` (S2.0 has no right-associative binary operators).
    fn parse_expression(&mut self, min_prec: u8) -> Expr {
        let mut lhs = self.parse_unary();
        loop {
            let tok = self.peek();
            let op = match token_to_binop(tok.kind) {
                Some(op) if op.precedence() >= min_prec => op,
                _ => break,
            };
            self.advance();
            let rhs = self.parse_expression(op.precedence() + 1);
            let span = Span::new(lhs.span().start, rhs.span().end);
            lhs = Expr::Binary {
                op,
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                span,
            };
        }
        lhs
    }

    fn parse_unary(&mut self) -> Expr {
        let tok = self.peek();
        let op = match tok.kind {
            TokenKind::Minus => Some(UnOp::Neg),
            TokenKind::Bang => Some(UnOp::Not),
            TokenKind::Tilde => Some(UnOp::BitNot),
            _ => None,
        };
        if let Some(op) = op {
            let start = tok.span.start;
            self.advance();
            let operand = self.parse_unary();
            let span = Span::new(start, operand.span().end);
            return Expr::Unary {
                op,
                operand: Box::new(operand),
                span,
            };
        }
        self.parse_postfix()
    }

    fn parse_postfix(&mut self) -> Expr {
        let mut expr = self.parse_primary();
        loop {
            let tok = self.peek();
            match tok.kind {
                TokenKind::LParen => {
                    self.advance();
                    let args = self.parse_call_args();
                    let close = self.expect(TokenKind::RParen, "`)`");
                    let span = Span::new(expr.span().start, close.span.end);
                    expr = Expr::Call {
                        callee: Box::new(expr),
                        args,
                        span,
                    };
                }
                TokenKind::LBracket => {
                    self.advance();
                    let index = self.parse_expression(MIN_PREC);
                    let close = self.expect(TokenKind::RBracket, "`]`");
                    let span = Span::new(expr.span().start, close.span.end);
                    expr = Expr::Index {
                        target: Box::new(expr),
                        index: Box::new(index),
                        span,
                    };
                }
                TokenKind::Dot => {
                    self.advance();
                    let name = self.expect_ident("field name");
                    let span = Span::new(expr.span().start, name.span.end);
                    expr = Expr::Field {
                        target: Box::new(expr),
                        name,
                        span,
                    };
                }
                _ => break,
            }
        }
        expr
    }

    fn parse_call_args(&mut self) -> Vec<Expr> {
        let mut args = Vec::new();
        loop {
            let tok = self.peek();
            if matches!(tok.kind, TokenKind::RParen | TokenKind::Eof) {
                break;
            }
            args.push(self.parse_expression(MIN_PREC));
            if self.peek().kind == TokenKind::Comma {
                self.advance();
            } else {
                break;
            }
        }
        args
    }

    fn parse_primary(&mut self) -> Expr {
        let tok = self.peek();
        match tok.kind {
            TokenKind::Int => {
                self.advance();
                Expr::Int {
                    text: self.lexeme(tok.span).to_string(),
                    span: tok.span,
                }
            }
            TokenKind::Float => {
                self.advance();
                Expr::Float {
                    text: self.lexeme(tok.span).to_string(),
                    span: tok.span,
                }
            }
            TokenKind::Str => {
                self.advance();
                Expr::Str {
                    text: self.lexeme(tok.span).to_string(),
                    span: tok.span,
                }
            }
            TokenKind::True => {
                self.advance();
                Expr::Bool {
                    value: true,
                    span: tok.span,
                }
            }
            TokenKind::False => {
                self.advance();
                Expr::Bool {
                    value: false,
                    span: tok.span,
                }
            }
            TokenKind::NoneKw => {
                self.advance();
                Expr::NoneLit { span: tok.span }
            }
            TokenKind::Ident => self.parse_ident_or_path(),
            TokenKind::LParen => {
                self.advance();
                let inner = self.parse_expression(MIN_PREC);
                let close = self.expect(TokenKind::RParen, "`)`");
                let span = Span::new(tok.span.start, close.span.end);
                Expr::Paren {
                    inner: Box::new(inner),
                    span,
                }
            }
            TokenKind::LBrace => self.parse_block_expr(),
            TokenKind::If => self.parse_if_expr(),
            TokenKind::While => self.parse_while_expr(),
            TokenKind::Loop => self.parse_loop_expr(),
            TokenKind::Match => self.parse_match_expr(),
            TokenKind::Return => self.parse_return_expr(),
            TokenKind::Break => self.parse_break_expr(),
            TokenKind::Continue => self.parse_continue_expr(),
            TokenKind::Error => {
                // The lexer already attached a Diagnostic for this region,
                // forwarded as ParseErrorKind::Lex by `Parser::new`. Emit a
                // structural placeholder and consume the token so the outer
                // loop can keep going.
                self.advance();
                Expr::Error { span: tok.span }
            }
            TokenKind::Eof => {
                self.error(
                    ParseErrorKind::UnexpectedEof {
                        expected: "expression",
                    },
                    tok.span,
                );
                Expr::Error { span: tok.span }
            }
            kind => {
                self.error(
                    ParseErrorKind::UnexpectedToken {
                        found: kind,
                        expected: "expression",
                    },
                    tok.span,
                );
                self.advance();
                Expr::Error { span: tok.span }
            }
        }
    }

    /// Parses a top-level sequence of statements until [`TokenKind::Eof`].
    ///
    /// Mirrors the body of a [`Expr::Block`] but with no enclosing braces
    /// and no tail expression slot: every statement must terminate with `;`
    /// or be block-like.
    fn parse_top_level_stmts(&mut self) -> Vec<Stmt> {
        let mut stmts = Vec::new();
        while self.peek().kind != TokenKind::Eof {
            let before = self.pos;
            let kind = self.peek().kind;
            if token_starts_item(kind) {
                let item = self.parse_item();
                stmts.push(Stmt::Item(item));
            } else if kind == TokenKind::Let {
                stmts.push(self.parse_let_stmt());
            } else {
                stmts.push(self.parse_expr_stmt());
            }
            // Defensive: if a sub-parser failed to advance even after error
            // recovery (which would otherwise spin the outer loop), force a
            // single-token bump so the loop terminates.
            if self.pos == before {
                if self.peek().kind == TokenKind::Eof {
                    break;
                }
                self.advance();
            }
        }
        stmts
    }

    fn parse_let_stmt(&mut self) -> Stmt {
        let let_kw = self.expect(TokenKind::Let, "`let`");
        let name = self.expect_ident("identifier after `let`");
        let ty = if self.peek().kind == TokenKind::Colon {
            self.advance();
            Some(self.parse_type())
        } else {
            None
        };
        let init = if self.peek().kind == TokenKind::Eq {
            self.advance();
            Some(self.parse_expression(MIN_PREC))
        } else {
            None
        };
        let semi = self.expect(TokenKind::Semicolon, "`;`");
        Stmt::Let {
            name,
            ty,
            init,
            span: Span::new(let_kw.span.start, semi.span.end),
        }
    }

    /// Parses one expression statement at top level: `<expr> ;` or, when
    /// the expression is block-like, `<expr>` (no `;`).
    fn parse_expr_stmt(&mut self) -> Stmt {
        let start = self.peek().span.start;
        let expr = self.parse_expression(MIN_PREC);
        if self.peek().kind == TokenKind::Semicolon {
            let semi = self.advance();
            return Stmt::Expr {
                expr,
                has_semi: true,
                span: Span::new(start, semi.span.end),
            };
        }
        if expr.is_block_like() {
            let span = expr.span();
            return Stmt::Expr {
                expr,
                has_semi: false,
                span,
            };
        }
        // Missing `;`. Emit diagnostic; keep the expression as a stmt and
        // let the outer loop make progress.
        let cur = self.peek();
        let kind = if cur.kind == TokenKind::Eof {
            ParseErrorKind::UnexpectedEof { expected: "`;`" }
        } else {
            ParseErrorKind::UnexpectedToken {
                found: cur.kind,
                expected: "`;`",
            }
        };
        self.error(kind, cur.span);
        let span = expr.span();
        Stmt::Expr {
            expr,
            has_semi: false,
            span,
        }
    }

    /// Parses `{ stmts; tail? }`. The opening `{` is at [`Self::peek`].
    fn parse_block_expr(&mut self) -> Expr {
        let open = self.expect(TokenKind::LBrace, "`{`");
        let mut stmts: Vec<Stmt> = Vec::new();
        let mut tail: Option<Box<Expr>> = None;
        loop {
            let cur = self.peek();
            if matches!(cur.kind, TokenKind::RBrace | TokenKind::Eof) {
                break;
            }
            let before = self.pos;
            if token_starts_item(cur.kind) {
                let item = self.parse_item();
                stmts.push(Stmt::Item(item));
            } else if cur.kind == TokenKind::Let {
                stmts.push(self.parse_let_stmt());
            } else {
                let start = cur.span.start;
                let expr = self.parse_expression(MIN_PREC);
                let after = self.peek();
                if after.kind == TokenKind::Semicolon {
                    let semi = self.advance();
                    stmts.push(Stmt::Expr {
                        expr,
                        has_semi: true,
                        span: Span::new(start, semi.span.end),
                    });
                } else if matches!(after.kind, TokenKind::RBrace | TokenKind::Eof) {
                    // Tail expression: no `;`, immediately followed by the
                    // block closer. End of block body.
                    tail = Some(Box::new(expr));
                    break;
                } else if expr.is_block_like() {
                    let span = expr.span();
                    stmts.push(Stmt::Expr {
                        expr,
                        has_semi: false,
                        span,
                    });
                } else {
                    // Missing `;` between non-block-like statements; recover
                    // by treating the expression as a stmt and reporting.
                    self.error(
                        ParseErrorKind::UnexpectedToken {
                            found: after.kind,
                            expected: "`;`",
                        },
                        after.span,
                    );
                    let span = expr.span();
                    stmts.push(Stmt::Expr {
                        expr,
                        has_semi: false,
                        span,
                    });
                }
            }
            if self.pos == before {
                // Defensive: never spin the loop without progress.
                if self.peek().kind == TokenKind::Eof {
                    break;
                }
                self.advance();
            }
        }
        let close = self.expect(TokenKind::RBrace, "`}`");
        Expr::Block {
            stmts,
            tail,
            span: Span::new(open.span.start, close.span.end),
        }
    }

    /// `if <cond> <block> [else (if-expr | block)]`
    fn parse_if_expr(&mut self) -> Expr {
        let if_kw = self.expect(TokenKind::If, "`if`");
        let cond = self.parse_expression(MIN_PREC);
        let then_branch = self.parse_block_expr();
        let mut end = then_branch.span().end;
        let else_branch = if self.peek().kind == TokenKind::Else {
            self.advance();
            let next = if self.peek().kind == TokenKind::If {
                self.parse_if_expr()
            } else {
                self.parse_block_expr()
            };
            end = next.span().end;
            Some(Box::new(next))
        } else {
            None
        };
        Expr::If {
            cond: Box::new(cond),
            then_branch: Box::new(then_branch),
            else_branch,
            span: Span::new(if_kw.span.start, end),
        }
    }

    /// `while <cond> <block>`
    fn parse_while_expr(&mut self) -> Expr {
        let while_kw = self.expect(TokenKind::While, "`while`");
        let cond = self.parse_expression(MIN_PREC);
        let body = self.parse_block_expr();
        let span = Span::new(while_kw.span.start, body.span().end);
        Expr::While {
            cond: Box::new(cond),
            body: Box::new(body),
            span,
        }
    }

    /// `loop <block>`
    fn parse_loop_expr(&mut self) -> Expr {
        let loop_kw = self.expect(TokenKind::Loop, "`loop`");
        let body = self.parse_block_expr();
        let span = Span::new(loop_kw.span.start, body.span().end);
        Expr::Loop {
            body: Box::new(body),
            span,
        }
    }

    /// `match <scrutinee> { <arm,>* }` (S2.2b).
    ///
    /// `match` is a primary expression; the scrutinee is parsed with the
    /// usual expression grammar. Arms are separated by `,`; a trailing
    /// `,` after the last arm is allowed and `,` is optional after an
    /// arm whose body is block-like. The arm grammar is
    /// `pattern (if <guard>)? => <body>`.
    fn parse_match_expr(&mut self) -> Expr {
        let kw = self.expect(TokenKind::Match, "`match`");
        let scrutinee = self.parse_expression(MIN_PREC);
        self.expect(TokenKind::LBrace, "`{`");
        let mut arms: Vec<MatchArm> = Vec::new();
        loop {
            let cur = self.peek();
            if matches!(cur.kind, TokenKind::RBrace | TokenKind::Eof) {
                break;
            }
            let before = self.pos;
            let arm = self.parse_match_arm();
            let body_block_like = arm.body.is_block_like();
            arms.push(arm);
            let after = self.peek();
            if after.kind == TokenKind::Comma {
                self.advance();
            } else if matches!(after.kind, TokenKind::RBrace | TokenKind::Eof) {
                break;
            } else if !body_block_like {
                self.error(
                    ParseErrorKind::UnexpectedToken {
                        found: after.kind,
                        expected: "`,` or `}` after match arm",
                    },
                    after.span,
                );
            }
            // Defensive: never spin without progress.
            if self.pos == before {
                if self.peek().kind == TokenKind::Eof {
                    break;
                }
                self.advance();
            }
        }
        let close = self.expect(TokenKind::RBrace, "`}`");
        Expr::Match {
            scrutinee: Box::new(scrutinee),
            arms,
            span: Span::new(kw.span.start, close.span.end),
        }
    }

    fn parse_match_arm(&mut self) -> MatchArm {
        let start = self.peek().span.start;
        let pattern = self.parse_pattern();
        let guard = if self.peek().kind == TokenKind::If {
            self.advance();
            Some(self.parse_expression(MIN_PREC))
        } else {
            None
        };
        self.expect(TokenKind::FatArrow, "`=>`");
        let body = self.parse_expression(MIN_PREC);
        let end = body.span().end;
        MatchArm {
            pattern,
            guard,
            body,
            span: Span::new(start, end),
        }
    }

    /// Parse a full pattern (or-pattern at the outermost level).
    ///
    /// An or-pattern always has at least two alternatives; a single
    /// alternative collapses to the underlying primary pattern.
    fn parse_pattern(&mut self) -> Pattern {
        let first = self.parse_primary_pattern();
        if self.peek().kind != TokenKind::Pipe {
            return first;
        }
        let mut alts = vec![first];
        while self.peek().kind == TokenKind::Pipe {
            self.advance();
            alts.push(self.parse_primary_pattern());
        }
        let start = alts.first().expect("non-empty or-pattern").span().start;
        let end = alts.last().expect("non-empty or-pattern").span().end;
        Pattern::Or {
            alts,
            span: Span::new(start, end),
        }
    }

    fn parse_primary_pattern(&mut self) -> Pattern {
        let tok = self.peek();
        let base = match tok.kind {
            TokenKind::DotDot => {
                self.advance();
                Pattern::Rest { span: tok.span }
            }
            TokenKind::Int
            | TokenKind::Float
            | TokenKind::Str
            | TokenKind::True
            | TokenKind::False
            | TokenKind::NoneKw
            | TokenKind::Minus => self.parse_literal_pattern(),
            TokenKind::Ident | TokenKind::SomeKw => self.parse_ident_pattern(),
            TokenKind::Error => {
                self.advance();
                Pattern::Error { span: tok.span }
            }
            TokenKind::Eof => {
                self.error(
                    ParseErrorKind::UnexpectedEof {
                        expected: "pattern",
                    },
                    tok.span,
                );
                Pattern::Error { span: tok.span }
            }
            kind => {
                self.error(
                    ParseErrorKind::UnexpectedToken {
                        found: kind,
                        expected: "pattern",
                    },
                    tok.span,
                );
                self.advance();
                Pattern::Error { span: tok.span }
            }
        };
        // Range pattern: literal followed by `..` or `..=` and another
        // literal. Only literals can be range endpoints in S2.2b; richer
        // endpoints (path constants, expressions) follow in a later slice.
        if matches!(base, Pattern::Literal { .. }) && self.peek().kind == TokenKind::DotDot {
            return self.parse_range_pattern_after_lo(base);
        }
        base
    }

    fn parse_literal_pattern(&mut self) -> Pattern {
        let tok = self.peek();
        if tok.kind == TokenKind::Minus {
            let minus_span = tok.span;
            self.advance();
            let inner_tok = self.peek();
            let inner = match inner_tok.kind {
                TokenKind::Int => {
                    self.advance();
                    Expr::Int {
                        text: self.lexeme(inner_tok.span).to_string(),
                        span: inner_tok.span,
                    }
                }
                TokenKind::Float => {
                    self.advance();
                    Expr::Float {
                        text: self.lexeme(inner_tok.span).to_string(),
                        span: inner_tok.span,
                    }
                }
                other => {
                    self.error(
                        ParseErrorKind::UnexpectedToken {
                            found: other,
                            expected: "numeric literal after `-` in pattern",
                        },
                        inner_tok.span,
                    );
                    return Pattern::Error {
                        span: Span::new(minus_span.start, inner_tok.span.start),
                    };
                }
            };
            let span = Span::new(minus_span.start, inner.span().end);
            let value = Expr::Unary {
                op: UnOp::Neg,
                operand: Box::new(inner),
                span,
            };
            return Pattern::Literal { value, span };
        }
        let value = match tok.kind {
            TokenKind::Int => {
                self.advance();
                Expr::Int {
                    text: self.lexeme(tok.span).to_string(),
                    span: tok.span,
                }
            }
            TokenKind::Float => {
                self.advance();
                Expr::Float {
                    text: self.lexeme(tok.span).to_string(),
                    span: tok.span,
                }
            }
            TokenKind::Str => {
                self.advance();
                Expr::Str {
                    text: self.lexeme(tok.span).to_string(),
                    span: tok.span,
                }
            }
            TokenKind::True => {
                self.advance();
                Expr::Bool {
                    value: true,
                    span: tok.span,
                }
            }
            TokenKind::False => {
                self.advance();
                Expr::Bool {
                    value: false,
                    span: tok.span,
                }
            }
            TokenKind::NoneKw => {
                self.advance();
                Expr::NoneLit { span: tok.span }
            }
            _ => unreachable!("parse_literal_pattern dispatched on non-literal token"),
        };
        let span = value.span();
        Pattern::Literal { value, span }
    }
